--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -10,7 +10,7 @@ parameters:
 
 framework:
     #esi: ~
-    translator: { fallbacks: ['%locale%'] }
+    #translator: { fallbacks: ['%locale%'] }
     secret: '%secret%'
     router:
         resource: '%kernel.project_dir%/app/config/routing.yml'
@@ -35,8 +35,6 @@ framework:
 
 # Twig Configuration
 twig:
-    form_themes:
-        - 'bootstrap_3_layout.html.twig'
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
 
@@ -69,12 +67,3 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
-
-
-fos_user:
-    db_driver: orm
-    firewall_name: main
-    user_class: Birds\ObservationsBundle\Entity\User
-    from_email:
-        address:     "%mailer_user%"
-        sender_name: "%mailer_user%"
