--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,11 +4,15 @@ security:
 
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
-        fos_userbundle:
-            id: fos_user.user_provider.username_email
+        in_memory:
+            memory:
+                users:
+                    admin:
+                        password: adminPass
+                        roles:  'ROLE_ADMIN'
 
     encoders:
-        FOS\UserBundle\Model\UserInterface: bcrypt
+        Symfony\Component\Security\Core\User\User: plaintext
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
@@ -16,14 +20,7 @@ security:
             security: false
 
         main:
-            pattern: ^/
-            form_login:
-                provider: fos_userbundle
-                csrf_token_generator: security.csrf.token_manager
-            logout:    true
-            anonymous: true
-            remember_me:
-                secret: '%secret%'
+            anonymous: ~
             # activate different ways to authenticate
 
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
@@ -32,11 +29,5 @@ security:
             # https://symfony.com/doc/current/security/form_login_setup.html
             #form_login: ~
     role_hierarchy:
-        ROLE_NATURALIST: ROLE_USER
-        ROLE_ADMIN:      ROLE_NATURALIST
-
-    access_control:
-        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin/, role: ROLE_ADMIN }
+        ROLE_NATURALIST: [ROLE_USER]
+        ROLE_ADMIN:      [ROLE_NATURALIST, ROLE_USER]
