--- a/src/Birds/ObservationsBundle/Resources/config/routing.yml
+++ b/src/Birds/ObservationsBundle/Resources/config/routing.yml
@@ -1,8 +1,11 @@
-birds_observations:
+birds_observations_observations:
     path:     /observations
     defaults: { _controller: BirdsObservationsBundle:Observation:observations }
 
-birds_observations_add:
+birds_observations_observations:
     path:     /add
     defaults: { _controller: BirdsObservationsBundle:Observation:addObs }
 
+birds_observations_observations:
+    path:     /admin
+    defaults: { _controller: BirdsObservationsBundle:Observation:addObs }
